force-app/main/default/objects/User/fields/aprobar__c.field-meta.xml
<CustomField>
    <fullName>aprobar__c</fullName>
    <label>Aprobar</label>
    <relationshipName>Usuarios</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>