force-app/main/default/objects/User/fields/CeBe__c.field-meta.xml
<CustomField>
    <fullName>CeBe__c</fullName>
    <label>CeBe</label>
    <length>12</length>
    <type>Text</type>
</CustomField>