force-app/main/default/objects/User/fields/CeCo__c.field-meta.xml
<CustomField>
    <fullName>CeCo__c</fullName>
    <label>CeCo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>