force-app/main/default/objects/User/fields/Equipo__c.field-meta.xml
<CustomField>
    <fullName>Equipo__c</fullName>
    <label>Equipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administración</fullName>
            </value>
            <value>
                <fullName>Administración de Ventas</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Convenios</fullName>
            </value>
            <value>
                <fullName>Dirección Gral</fullName>
            </value>
            <value>
                <fullName>Especificadores</fullName>
            </value>
            <value>
                <fullName>Exportaciones</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Gerencia de Ventas</fullName>
            </value>
            <value>
                <fullName>Industriales</fullName>
            </value>
            <value>
                <fullName>KAM Nacional</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Muestras</fullName>
            </value>
            <value>
                <fullName>Operaciones</fullName>
            </value>
            <value>
                <fullName>Planeación y TI</fullName>
            </value>
            <value>
                <fullName>Presidente de Consejo</fullName>
            </value>
            <value>
                <fullName>Proyectos</fullName>
            </value>
            <value>
                <fullName>Región Bajío</fullName>
            </value>
            <value>
                <fullName>Región Centro</fullName>
            </value>
            <value>
                <fullName>Región Centro Distribuidores</fullName>
            </value>
            <value>
                <fullName>Región Jr Noroeste</fullName>
            </value>
            <value>
                <fullName>Región Norte</fullName>
            </value>
            <value>
                <fullName>Región Obra Publica</fullName>
            </value>
            <value>
                <fullName>Región Occidente</fullName>
            </value>
            <value>
                <fullName>Región Sureste</fullName>
            </value>
            <value>
                <fullName>Tiendas_Centro</fullName>
                <label>Tiendas Centro</label>
            </value>
            <value>
                <fullName>Tiendas Norte</fullName>
            </value>
            <value>
                <fullName>Tiendas Sur</fullName>
            </value>
            <value>
                <fullName>Unidades Moviles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>