force-app/main/default/objects/User/fields/Grupo_de_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Vendedor__c</fullName>
    <label>Grupo de Vendedor</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>