force-app/main/default/objects/User/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>