force-app/main/default/objects/User/fields/Placas__c.field-meta.xml
<CustomField>
    <fullName>Placas__c</fullName>
    <label>Placas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>