force-app/main/default/objects/User/fields/Rendimiento_por_litro__c.field-meta.xml
<CustomField>
    <fullName>Rendimiento_por_litro__c</fullName>
    <label>Rendimiento por litro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>